--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <html>
   <head>
-    <title>Peter Morley</title>
+    <title>Hello World!</title>
   </head>
   <body>
-    <p>Peter Morley</p>
+    <p>Hello World!</p>
   </body>
 </html>
 
