--- a/index.html
+++ b/index.html
@@ -3,7 +3,12 @@
     <title>Hello World!</title>
   </head>
   <body>
-    <p>Hello World!</p>
+    <div>
+      <h1>Hello World!</h1>
+      <h2>Level 2 Header</h2>
+      <p>This is a paragraph</p>
+      <p>This is another paragraph</p>
+    </div>
   </body>
 </html>
 
