--- a/index.html
+++ b/index.html
@@ -1,13 +1,17 @@
 <html>
   <head>
     <title>Hello World!</title>
+    <style>
+      .blue {color:blue;}
+      .red {color:red;}
+      #big {font-size: 120%}
   </head>
   <body>
     <div>
       <h1>Hello World!</h1>
       <h2>Level 2 Header</h2>
-      <p>This is a paragraph</p>
-      <p>This is another paragraph</p>
+      <p>This is a <span class = "blue"> blue span</span> paragraph</p>
+      <p>This is another <span id = "big" class = "red"> blue span</span>paragraph</p>
     </div>
   </body>
 </html>
