--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
   <head>
     <title>Hello World!</title>
     <style>
-      .blue {color:blue;}
-      .red {color:red;}
-      #big {font-size: 120%}
+      .blue { color:blue;}
+      .red { color:red;}
+      #big { font-size: 120%}
+    </style>
   </head>
   <body>
     <div>
