--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
   <head>
     <title>Hello World!</title>
     <style>
+      h1 { font-weight: 500;}
       .blue { color:blue;}
       .red { color:red;}
       #big { font-size: 120%}
