--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <div>
       <h1>Hello World!</h1>
       <h2>Level 2 Header</h2>
-      <p>This is a <span class = "blue"> blue span</span> paragraph</p>
-      <p>This is another <span id = "big" class = "red"> blue span</span>paragraph</p>
+      <p>This is a <span class = "blue">blue span</span> paragraph</p>
+      <p>This is another <span id = "big" class = "red">red span</span>paragraph</p>
     </div>
   </body>
 </html>
