--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <head>
     <title>Hello World!</title>
     <style>
-      h1 { font-weight: 500;}
+      h1 { font-family: helvetica, sans-serif;}
       .blue { color:blue;}
       .red { color:red;}
       #big { font-size: 120%}
