--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
   <body>
     <div>
       <h1>Peter Morley</h1>
-      <h2>Level 2 Header</h2>
+      <h2>About Me:</h2>
       <p>Hello! I am a from Nassau, Bahamas and I am currently enrolled at the Denison University in Granville, Ohio. You may thing 
         why would he pick Ohio, but the liberal arts experience and the swimming program made it the perfect place for me. I am currently 
         majoring in Data Analytics with a concentration in Economics. While I would love to continue possibly in this field, I am willing
         to contribute to any background which is in need of a Data Analyst even if it is Real Estate.</p>
-      <img src="IMG_0009.JPG" alt="Picture of Myself">
+      <img src="IMG_0009.JPG" alt="Picture of Myself" width="500" height="600">
       <p>This is another <span id = "big" class = "red">red span</span>paragraph</p>
     </div>
   </body>
