--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
       <p>Hello! I am a from Nassau, Bahamas and I am currently enrolled at the Denison University in Granville, Ohio. You may thing 
         why would he pick Ohio, but the liberal arts experience and the swimming program made it the perfect place for me. I am currently 
         majoring in Data Analytics with a concentration in Economics. While I would love to continue possibly in this field, I am willing
-        to contribute to any background which is in need of a Data Analyst even if it is Real Estate.</p>
-      <img src="IMG_0009.JPG" alt="Picture of Myself" width="100" height="200">
+        to contribute to any background which is in need of a Data Analyst.</p>
+      <img src="IMG_0009.JPG" alt="Picture of Myself" width="200" height="300">
       <p>This is another <span id = "big" class = "red">red span</span>paragraph</p>
     </div>
   </body>
