--- a/index.html
+++ b/index.html
@@ -11,16 +11,13 @@
 <div class="container outer">
   <div id="top" class="jumbotron vertical-center">
     <div class="container text-center">
-      <h1>Peter Morley</h1>
-      <div class="row">
-          <div class="col-md-12">Welcome to Pittsburgh!</div>
-      </div>
-      <h2>About Me:</h2>
-      <p>Hello! I am a from Nassau, Bahamas and I am currently enrolled at the Denison University in Granville, Ohio. You may thing 
+      <h1 align="center">Peter Morley</h1>
+      <h2 align="center">About Me:</h2>
+      <p align="center">Hello! I am a from Nassau, Bahamas and I am currently enrolled at the Denison University in Granville, Ohio. You may thing 
         why would he pick Ohio, but the liberal arts experience and the swimming program made it the perfect place for me. I am currently 
         majoring in Data Analytics with a concentration in Economics. While I would love to continue possibly in this field, I am willing
         to contribute to any background which is in need of a Data Analyst.</p>
-      <img src="IMG_0009.JPG" alt="Picture of Myself" width="200" height="280">
+      <img src="IMG_0009.JPG" alt="Picture of Myself" width="200" height="280" align="center">
    </div>
 </div>
 </div>
