--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 </div>
 <div align="center">
     <img src="https://www.animatedimages.org/data/media/623/animated-swimming-image-0010.gif" alt="Swimmer" width="200" height="200">
-    <p At Denison I was a swimmer but stopped at the start of my junior year because of a repeating injury and that it was time to move on. Throughout my swim
+    <p> At Denison I was a swimmer but stopped at the start of my junior year because of a repeating injury and that it was time to move on. Throughout my swim
        career I was able to travel throughout the Caribbean and compete against top tier athletes from around th world. I am forever grateful for this sport being 
        apart of my life. </p>
     </div>
