--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
-
- <html>
+<html>
 <head>
   <title>Peter Morley</title>
   <meta charset="utf-8" />
@@ -7,33 +6,29 @@
 <body>
 <div class="container outer">
   <div id="top" class="jumbotron vertical-center">
-    <div class="container text-center" align="center">
-      <h1>Peter Morley</h1>
+    <div class="container text-center">
+      <h1 align="center">Peter Morley</h1>
       <h2 align="center">About Me:</h2>
-    </div>
-    <div class="row">
-      <div class="col-md-12">
-          <img src="flag-round-250.png" alt="Bahamian Flag" width="200" height="200">
-      </div>
-      <div class="col-md-12">
-        <p align="center">Hello! I am a from Nassau, Bahamas and I am currently enrolled at the Denison University in Granville, Ohio. You may thing 
+   </div>
+   <div align="center">
+    <p align="center">Hello! I am a from Nassau, Bahamas and I am currently enrolled at the Denison University in Granville, Ohio. You may thing 
         why would he pick Ohio, but the liberal arts experience and the swimming program made it the perfect place for me. I am currently 
         majoring in Data Analytics with a concentration in Economics. While I would love to continue possibly in this field, I am willing
         to contribute to any background which is in need of a Data Analyst.</p>
-      </div>
-      <div class="col-md-12">
-          <img src="Denison_University_seal2.png" alt="Denison Seal" width="200" height="200">
-      </div>
    </div>
-   <div class="row" align="center">
-       <div class="col-md-12">
-            <img src="https://www.animatedimages.org/data/media/623/animated-swimming-image-0010.gif" alt="Swimmer" width="200" height="200">
-       </div>
-       <div class="col-md-12">
-           <p> At Denison I was a swimmer but stopped at the start of my junior year because of a repeating injury and that it was time to move on. Throughout my swim
+   <div align="center">
+       <img src="flag-round-250.png" alt="Bahamian Flag" width="200" height="200">
+       <img src="IMG_0009.JPG" alt="Photo of Myself" width="200" height="280">
+       <img src="Denison_University_seal2.png" alt="Denison Seal" width="200" height="200">
+   </div>
+   <div align="center"
+       <img src="https://www.animatedimages.org/data/media/623/animated-swimming-image-0010.gif" alt="Swimmer" width="200" height="200">
+   </div>
+   <div align="center">
+      <p> At Denison I was a swimmer but stopped at the start of my junior year because of a repeating injury and that it was time to move on. Throughout my swim
              career I was able to travel throughout the Caribbean and compete against top tier athletes from around th world. I am forever grateful for this sport being 
              apart of my life. </p>
-       </div>        
+ </div>   
 </div>
 </div>
 </body>
