--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
        <img src="IMG_0009.JPG" alt="Photo of Myself" width="200" height="280">
        <img src="Denison_University_seal2.png" alt="Denison Seal" width="200" height="200">
    </div>
-   <div align="center"
+   <div align="center">
        <img src="https://www.animatedimages.org/data/media/623/animated-swimming-image-0010.gif" alt="Swimmer" width="200" height="200">
    </div>
    <div align="center">
